src/css/main.css
.header {
    background-image: linear-gradient(#555,#222);
    color: #FFF;
    position: fixed;
    width: 100%;
    padding: 20px;
    margin-bottom: 1000px;
    font-size: 24px;
    font-weight: 400;
    z-index: 99;
}

ul.navbar {
    height: 100%;
    width: 180px; /* Set the width of the sidebar */
    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
    z-index: 1; /* Stay on top */
    top: 0; /* Stay at the top */
    left: 0;
    background-color: #e7e7e7; /* Black */
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 20px;
    margin-top: 69px;
    box-shadow:inset -5px -5px 15px -5px #969696;
}

ul.navbar li {
    text-align: left;
    padding-bottom: 30px;
    text-shadow: 1px 1px #fff;
    line-height: 1;
}


ul.navbar li a {
    text-decoration: none;
    font-size: 18px;
    color: #222;
    display: inline-block;
    line-height: 1;
}

ul.navbar li a:hover {
    color: #888;
}

.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 22px;  /* Preferred icon size */
    display: inline-block;
    vertical-align: middle;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;
    padding-right: 5px;
  }

.content {
    background-color: #fff;
    padding: 20px;
    margin-left: 180px;
}

.content h2 {
    padding: 0;
}

.content a {
    color: #000;
}

